# gomoku-mono-repo

./: .env.sample  .envrc  .gitignore  .mcp.json  AGENT.md  Brewfile  CLAUDE.md  README.md  justfile  lefthook.yml
.claude/plans/0001-who-command-and-idle-time/: spec.md
.github/workflows/: rust-build.yml
api/: pyproject.toml
api/app/: config.py  exceptions.py  main.py  security.py
api/app/middleware/: http_response_exception.py
api/app/models/: db_tables.py  game.py  multiplayer.py  types.py  user.py
api/app/multiplayer/: allocate.py  db.py  exceptions.py
api/app/routers/: auth.py  chat.py  game.py  multiplayer.py  social.py  user.py
api/app/services/: email.py
api/db/migrations/versions/: 20260512-220000-add-abandoned-by-and-backfill-chats.py  20260513-000000-games-status-and-in-progress.py  20260513-001000-online-users-view.py
api/scripts/: seed_dev_users.py
api/tests/: conftest.py  test_chat_invite.py  test_chat_messages.py  test_email.py  test_multiplayer.py  test_online_users.py  test_user.py
frontend/: index.html  package-lock.json
frontend/assets/: site.webmanifest
frontend/cypress/e2e/: multiplayer-modal-defaults.cy.ts
frontend/src/: App.tsx  types.ts
frontend/src/__tests__/: ChatPanel.test.tsx  InviteAcceptModal.test.tsx  UserActivityTracker.test.tsx  whoTable.test.tsx
frontend/src/components/: ChatPanel.tsx  InviteAcceptModal.tsx  MultiplayerGamePage.tsx  SidePanelTabs.tsx  UserActivityTracker.tsx
frontend/src/hooks/: pollingSchedule.ts  useChatMessages.ts  useGameState.ts  useMultiplayerPolling.ts
frontend/src/lib/: multiplayerClient.ts
gomoku-c/src/net/: test_client.c
gomoku-httpd-rust/: .envrc  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deny.toml  justfile  lefthook.yml
gomoku-httpd-rust/doc/: README.md  step-01-bootstrap.md  step-02-concurrency-and-cli.md  step-03-integration-and-tests.md  step-04-final-polish.md
gomoku-httpd-rust/games/: rust-games.txt
gomoku-httpd-rust/src/: ai.rs  board.rs  eval.rs  game.rs  json_api.rs  main.rs  telemetry.rs
gomoku-httpd-rust/tests/: integration_two_clients.sh
iac/cloud_run/: main.tf  variables.tf
iac/local/: nginx.conf
